--- a/index.html
+++ b/index.html
@@ -49,15 +49,16 @@
           <li>IIIT Hyderabad</li>
           <li>Karan Johar School of Nepotism</li>
           <li>Achievements: 
-            <ul>Passed the JLPT N4 examination for japanese proficiency and will be writing N2 this summer</ul>
-            <ul>Written multiple plays in both english and sanskrit for upto national level competitions</ul>
-            <ul>Topped my school with 4 centums in the CBSE 10th board examinations</ul>
-            <ul>Have gotten 300/300 and secured AIR 1 in JEE Advanced</ul>
-            <ul>Met the Prime Minister of Uganda and taught him about JPop influence on Chinese Idols</ul>
-            <ul>Found a Shiny vaporeon in Pokemon FireRed</ul>
-            <ul>Helped AV Aditya's mother</ul>
-            <ul>Watched over 300 anime</ul>
-            <ul>Ate 17 chapatis in one sitting 7 years ago</ul>
+            <ul>• Successfully cleared the <strong>JLPT N4</strong> (Japanese Language Proficiency Test) and currently preparing for <strong>N2 level</strong>, scheduled for this summer.</ul>
+<ul>• Authored and directed multiple <strong>stage plays</strong> in both <strong>English and Sanskrit</strong>, performed at <strong>state and national level competitions</strong>.</ul>
+<ul>• Achieved <strong>top rank</strong> in school with <strong>four perfect scores (100/100)</strong> in the <strong>CBSE Class 10 board examinations</strong>.</ul>
+<ul>• Secured <strong>All India Rank 1</strong> in <strong>JEE Advanced</strong> with a perfect score of <strong>300/300</strong>.</ul>
+<ul>• Had the opportunity to <strong>meet the Prime Minister of Uganda</strong> and discuss the <strong>cultural influence of J-Pop on modern Chinese idol groups</strong>.</ul>
+<ul>• Discovered a <strong>Shiny Vaporeon</strong> while playing <strong>Pokémon FireRed</strong>, an exceptionally rare in-game encounter.</ul>
+<ul>• Extended personal assistance to <strong>AV Aditya’s mother</strong> during a critical time.</ul>
+<ul>• Watched and reviewed <strong>over 300 anime series</strong>, cultivating a deep understanding of Japanese media and storytelling.</ul>
+<ul>• Successfully consumed <strong>17 chapatis in a single sitting</strong>, a personal endurance feat achieved seven years ago.</ul>
+
 
           </li>
         </ul>
