--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="text">
         <h1 style="font-size: 2.5em; text-align: center;">My CV</h1>
         <div class="cv-links">
-          <a href="CV.pdf" target="_blank" class="cv-link">Get my CV here</a> <br>
+          <a href="cv.pdf" target="_blank" class="cv-link">Get my CV here</a> <br>
           <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank" class="cv-link">Video CV!</a>
         </div>
       </div>
